--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,7 @@ build: off
 
 install:
   - chmod +x gradlew
-  - java -jar ./artifacts/app-ibank.jar -P:profile=test &
+  - java -jar ./Artifacts/app-ibank.jar -P:profile=test &
 
 build_script:
   - ./gradlew test --info -Dselenide.headless=true
